--- a/src/app/tavern/character/character.component.html
+++ b/src/app/tavern/character/character.component.html
@@ -1,5 +1,5 @@
-<div class="name">{{character.name}}</div>
+<div class="name">{{character.nickName}}</div>
 <div class="images">
-  <img [src]="character.raceUrl"/>
-  <img [src]="character.classUrl"/>
+  <img [src]="character.raceUrl" alt=""/>
+  <img [src]="character.classUrl" alt=""/>
 </div>
