--- a/src/app/tavern/room/room.component.css
+++ b/src/app/tavern/room/room.component.css
@@ -1,9 +1,15 @@
 :host {
   display: inline-block;
-  width: 75%;
+  width: 50%;
   margin: 10px auto;
   text-align: center;
+
+  /*background-image: linear-gradient(saddlebrown, sandybrown);*/
+  /*opacity: 0.7;*/
 }
-h1 {
+h1.alliance {
+  color: cornflowerblue;
+}
+h1.horde{
   color: darkred;
 }
