--- a/src/app/tavern/character/character.component.html
+++ b/src/app/tavern/character/character.component.html
@@ -1,5 +1,5 @@
 <div class="name">{{character.nickName}}</div>
 <div class="images">
-  <img [src]="character.raceUrl" alt=""/>
-  <img [src]="character.classUrl" alt=""/>
+  <img [src]="character.characterRace.raceUrl" alt=""/>
+  <img [src]="character.characterClass.classUrl" alt=""/>
 </div>
