--- a/src/app/tavern/room/room.component.html
+++ b/src/app/tavern/room/room.component.html
@@ -1,7 +1,7 @@
 <h1 *ngIf="faction==='alliance'" [class]="faction">Alliance Room</h1>
-<h1 *ngIf="faction==='horde'" [class]="faction">HordeRoom</h1>
+<h1 *ngIf="faction==='horde'" [class]="faction">Horde Room</h1>
 <ng-container *ngFor="let character of characters">
-  <app-character *ngIf="character.faction===faction" [class]="character.faction" [character]="character"></app-character>
+  <app-character *ngIf="character.characterRace.faction===faction" [class]="character.characterRace.faction" [character]="character"></app-character>
 </ng-container>
 
 <!--<h1 class=horde>Horde Room</h1>-->
