Login  & registration panel & room css change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-room [faction]="'alliance'"></app-room>
-<app-room [faction]="'horde'"></app-room>
+<app-room></app-room>
+<app-panel></app-panel>
+
