--- a/src/app/tavern/room/room.component.css
+++ b/src/app/tavern/room/room.component.css
@@ -1,15 +1,33 @@
 :host {
   display: inline-block;
-  width: 50%;
-  margin: 10px auto;
+  width: 48%;
+  height: 100%;
+  min-height: 92vh;
+  margin: 1%;
   text-align: center;
+  float: left;
 
-  /*background-image: linear-gradient(saddlebrown, sandybrown);*/
-  /*opacity: 0.7;*/
+  background: url('~src/assets/inn.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
-h1.alliance {
+div.alliance {
+  display: inline-block;
+  float: left;
+  width: 50%;
+}
+div.horde {
+  display: inline-block;
+  float: right;
+  width: 50%;
+}
+div.alliance h1 {
   color: cornflowerblue;
 }
-h1.horde{
+
+div.horde h1{
   color: darkred;
 }
