--- a/src/app/tavern/room/room.component.css
+++ b/src/app/tavern/room/room.component.css
@@ -4,7 +4,6 @@
   height: 100%;
   min-height: 92vh;
   margin: 1%;
-  text-align: center;
   float: left;
 
   background: url('~src/assets/inn.jpg') no-repeat center center fixed;
@@ -26,8 +25,10 @@ div.horde {
 }
 div.alliance h1 {
   color: cornflowerblue;
+  text-shadow: 1px -2px black;
 }
 
 div.horde h1{
   color: darkred;
+  text-shadow: 1px -2px black;
 }
