--- a/src/app/panel/login-panel/login-panel.component.css
+++ b/src/app/panel/login-panel/login-panel.component.css
@@ -8,11 +8,11 @@
 label {
   display: block;
 }
-div.control-group {
+div.form-group {
   padding: 10px;
 }
 
-div.control-group.submit {
+div.form-group.submit {
   padding-top: 30px;
 }
 label.text-label {
@@ -21,7 +21,7 @@ label.text-label {
   color: rgb(193, 136, 0);
   text-shadow: 1px -2px black;
 }
-span.error {
+div.error {
   color: #a00000;
   font-size: 120%;
   font-weight: bold;
