--- a/src/app/panel/login-panel/login-panel.component.html
+++ b/src/app/panel/login-panel/login-panel.component.html
@@ -1,17 +1,10 @@
 <form [formGroup]="loginForm" autocomplete="off" (ngSubmit)="onSubmit()">
   <div *ngIf="(submitted && loginForm.invalid) || error" class="errors">
-    <div *ngIf="submitted && f.email.errors" class="error">
-      <div *ngIf="f.email.errors.required">E-mail is required</div>
-    </div>
-    <div *ngIf="submitted && f.email.errors" class="error">
-      <div *ngIf="f.email.errors.email">Invalid E-mail</div>
-    </div>
-    <div *ngIf="submitted && f.password.errors" class="error">
-      <div *ngIf="f.password.errors.required">Password is required</div>
-    </div>
-    <div *ngIf="error" class="error">{{error}}</div>
+    <div class="error" *ngIf="loginForm.get('email').hasError('required')">E-mail is required</div>
+    <div class="error" *ngIf="loginForm.get('email').hasError('email')">Invalid E-mail</div>
+    <div class="error" *ngIf="loginForm.get('password').hasError('required')">Password is required</div>
+    <div class="error" *ngIf="error" >{{error}}</div>
   </div>
-
   <div class="form-group">
     <label class="text-label" for="email">E-mail</label>
     <input type="email" formControlName="email" class="form-control" id="email"/>
