--- a/src/app/character/class-icon/class-icon.component.css
+++ b/src/app/character/class-icon/class-icon.component.css
@@ -1,11 +1,13 @@
 :host {
   display: inline-block;
   float: left;
-  padding: 5px;
+  padding: 10px;
 }
 img.selected {
   border-radius: 10px;
   border: 3px solid #f6a530;
+  box-shadow:0 0 10px 0 #ffce0f;
+
 }
 img {
   border-radius: 10px;
