--- a/src/app/character/gender-icon/gender-icon.component.css
+++ b/src/app/character/gender-icon/gender-icon.component.css
@@ -4,11 +4,11 @@
   width: 42%;
   margin: 4%;
   padding-top: 10px;
-  background-color: #574d4b;
 }
 img.selected {
   border-radius: 10px;
   border: 3px solid #f6a530;
+  box-shadow:0 0 10px 0 #ffce0f;
 }
 img {
   border-radius: 10px;
