--- a/src/app/character/race-icon/race-icon.component.css
+++ b/src/app/character/race-icon/race-icon.component.css
@@ -5,6 +5,7 @@
 img.selected {
   border-radius: 10px;
   border: 3px solid #f6a530;
+  box-shadow:0 0 10px 0 #ffce0f;
 }
 img {
   border-radius: 10px;
