--- a/src/app/character/character-creation/character-creation.component.css
+++ b/src/app/character/character-creation/character-creation.component.css
@@ -60,8 +60,68 @@ div.model {
   bottom: 0;
   left: 514px;
   margin: 8px;
-  background-color: rgba(87, 77, 75, 0.65);
   border-radius: 10px;
   border: 3px solid #f6a530;
+}
+div.form {
+  width: 636px;
+  height: 131px;
+  position: absolute;
+  left: 222px;
+  margin: 8px;
+  border-radius: 10px;
+  border: 3px solid #f6a530;
+}
 
+label {
+  display: block;
+}
+div.form-group {
+  padding: 10px;
+  display: inline-block;
+}
+
+div.errors {
+  border: 4px solid rgb(193, 54, 7);
+  border-radius: 10px;
+  background-color: rgba(77, 77, 77, 0.60);
+}
+label.text-label {
+  font-size: 140%;
+  font-weight: bold;
+  color: rgb(193, 136, 0);
+  text-shadow: 1px -2px black;
+}
+div.error {
+  color: #a00000;
+  font-size: 120%;
+  font-weight: bold;
+  text-shadow: 1px -1px black;
+}
+
+input {
+  box-sizing: border-box;
+  padding: 6px 14px;
+  width: 200px;
+  border-radius: 12px;
+  border-color: rgb(112, 111, 112);
+  outline: none;
+  background-color: rgba(77, 77, 77, 0.60);
+  font-size: 120%;
+  color: #fffcf5;
+}
+button {
+  width: 200px;
+  height: 30px;
+  border-radius: 12px;
+  border-color: rgb(112, 111, 112);
+  outline: none;
+  font-size: 130%;
+  color: rgb(193, 136, 0);
+  text-shadow: 1px -2px black;
+  font-weight: bold;
+  background-color: rgb(127, 14, 9);
+}
+button[type=submit]:disabled {
+  background-color: rgb(46, 12, 9);
 }
