--- a/src/app/panel/login-panel/login-panel.component.css
+++ b/src/app/panel/login-panel/login-panel.component.css
@@ -2,13 +2,17 @@
   display: inline-block;
   transform: translate(-50%,-50%);
   position: absolute;
-  top: 55%;
+  top: 50%;
+
+}
+div.form {
+  display: inline-block;
   background-color: rgba(122, 111, 109, 0.7);
   box-shadow:0 0 10px 0 #ffce0f;
   border-radius: 10px;
+  padding-top: 20px;
   height: 300px;
 }
-
 label {
   display: block;
 }
@@ -17,9 +21,11 @@ div.form-group {
 }
 
 div.errors {
-  border: 4px solid rgb(193, 54, 7);
+  border: 2px solid rgb(193, 54, 7);
+  box-shadow:0 0 10px 0 #ff2d00;
   border-radius: 12px;
   background-color: rgba(77, 77, 77, 0.60);
+  margin-bottom: 20px;
 }
 div.form-group.submit {
   padding-top: 24px;
