--- a/src/app/character/character-model/character-model.component.css
+++ b/src/app/character/character-model/character-model.component.css
@@ -2,7 +2,7 @@
   display: inline-block;
   width: 344px;
   height: 577px;
-  background-image: url('/assets/background.jpg');
+  background-image: url('../../../assets/background.jpg');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -10,27 +10,27 @@
   border-radius: 6px;
 }
 :host.human {
-  background-image: url('/assets/backgrounds/human.png');
+  background-image: url('../../../assets/backgrounds/human.png');
 }
 :host.nightelf {
-  background-image: url('/assets/backgrounds/nightelf.png');
+  background-image: url('../../../assets/backgrounds/nightelf.png');
 }
 :host.gnome {
-  background-image: url('/assets/backgrounds/gnome.png');
+  background-image: url('../../../assets/backgrounds/gnome.png');
 }
 :host.dwarf {
-  background-image: url('/assets/backgrounds/dwarf.png');
+  background-image: url('../../../assets/backgrounds/dwarf.png');
 }
 
 :host.orc {
-  background-image: url('/assets/backgrounds/orc.png');
+  background-image: url('../../../assets/backgrounds/orc.png');
 }
 :host.tauren {
-  background-image: url('/assets/backgrounds/tauren.png');
+  background-image: url('../../../assets/backgrounds/tauren.png');
 }
 :host.undead {
-  background-image: url('/assets/backgrounds/undead.png');
+  background-image: url('../../../assets/backgrounds/undead.png');
 }
 :host.troll {
-  background-image: url('/assets/backgrounds/troll.png');
+  background-image: url('../../../assets/backgrounds/troll.png');
 }
